<resources>
    <string name="app_name">MyPlants</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_add_plant">Add Plant</string>
    <string name="title_view_garden">View Garden</string>
    <string name="title_remove_plant">View Plant</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="re_password">Confirm Password</string>
    <string name="take_pic">Capture or Pick An Image for Your Plant</string>
    <string name="enter_plant_name">Enter The Plant Name</string>
    <string name="enter_plant_species">Enter The Plant Species</string>
    <string name="remove_plant_fragment">Remove Plant Fragment</string>
    <string name="add_plant_button">Add Plant Button</string>
    <string name="did_you_know">Did you know?</string>
    <string name="type">Type:</string>
    <string name="name">Name:</string>
    <string name="view">view</string>
    <string name="my_garden">My Garden</string>
    <string name="add_new_plant">Add New Plant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="save_changes">Save Changes</string>
    <string name="back">Back</string>
    <string name="garden_title">%1$s\'s Garden</string>
</resources>