<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textFontWeight="400"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcEmail"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="63dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/enter_text_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_email"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="#00FFFFFF"
            android:gravity="fill_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcPassword"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="63dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="63dp"
        android:background="@drawable/enter_text_background"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llcEmail">


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_password"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="#00FFFFFF"
            android:gravity="fill_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textColorHint="@color/text_color"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llcPassword" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>