<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    app:cardElevation="30dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="16dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/cardBackground">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgPlantImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@android:drawable/ic_menu_gallery"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:strokeColor="@color/buttonColor"
            app:strokeWidth="2dp"
            tools:visibility="visible">

        </com.google.android.material.imageview.ShapeableImageView>

        <TextView
            android:id="@+id/tvEnterName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@id/imgPlantImage"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@id/tvEnterName"
            app:layout_constraintTop_toTopOf="@id/tvEnterName" />

        <TextView
            android:id="@+id/tvEnterType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_4sdp"
            app:layout_constraintStart_toStartOf="@id/tvEnterName"
            app:layout_constraintTop_toBottomOf="@+id/tvEnterName"/>

        <TextView
            android:layout_width="@dimen/_130sdp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toEndOf="@id/tvEnterType"
            app:layout_constraintTop_toTopOf="@id/tvEnterType" />

        <Button
            android:id="@+id/btnViewPlant"
            android:layout_width="90dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/buttonColor"
            android:text="@string/view"
            android:layout_marginTop="@dimen/_6sdp"
            app:layout_constraintStart_toStartOf="@id/tvEnterType"
            app:layout_constraintTop_toBottomOf="@id/tvEnterType"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>