<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textFontWeight="400"
        android:textSize="80sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@android:drawable/ic_menu_gallery"
        android:padding="5dp"
        app:shapeAppearanceOverlay="@style/circleImageView"
        app:strokeColor="@color/cardBackground"
        app:strokeWidth="5dp"
        tools:visibility="visible"
        app:layout_constraintTop_toBottomOf="@+id/tvSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabtnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cardBackground"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_camera"
        app:rippleColor="@color/buttonColor"
        app:layout_constraintEnd_toEndOf="@id/profileImage"
        app:layout_constraintBottom_toBottomOf="@id/profileImage"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcUsername"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/enter_text_background"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileImage">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_user"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="#00FFFFFF"
            android:gravity="fill_vertical"
            android:hint="@string/user_name"
            android:inputType="textPersonName"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcEmail"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/enter_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llcUsername">


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_email"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="#00FFFFFF"
            android:gravity="fill_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcPassword"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/enter_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llcEmail">


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_password"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="#00FFFFFF"
            android:gravity="fill_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llcConfirmPassword"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/enter_text_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llcPassword">


        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:background="@drawable/ic_password"
            android:gravity="bottom" />

        <EditText
            android:id="@+id/et_re_enter_Password"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:background="#00FFFFFF"
            android:gravity="fill_vertical"
            android:hint="@string/re_password"
            android:inputType="textPassword"
            android:textColor="@color/text_color"
            android:textColorHint="@color/hint"
            android:textSize="20sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llcConfirmPassword" />

    <Button
        android:id="@+id/btnAddNewPlant"
        android:layout_width="150dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/buttonColor"
        android:fontFamily="sans-serif-condensed-light"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textFontWeight="400"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp" />


</androidx.constraintlayout.widget.ConstraintLayout>